Internal change
PiperOrigin-RevId: 537006348